[tool.poetry]
name = "nba"
version = "0.1.0"
description = "Mach Eight Sample Project"
authors = [
    "Juan Pablo Garcia <juanpagfe@gmail..com>",
]
license = "MIT"
readme = "README.md"
repository = "https://github.com/juanpagfe/nba.git"

[tool.poetry.dependencies]
argparse = "^1.4.0"

[tool.poetry.scripts]
nba = 'nba.cli:run'

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"

